# hs-auto-init

./: CHANGELOG.md  LICENSE  README.md  auto-init.cabal
cbits/: auto_init.c
src/: AutoInit.hs
